--- a/source/Project.toml
+++ b/source/Project.toml
@@ -3,3 +3,5 @@ ElectronicStructure = "f7ec468b-4310-4c77-90aa-f73697106762"
 ElectronicStructurePySCF = "14ae0224-3a94-4a0c-83bc-25b293227ef3"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 QuantumOps = "d0cc4389-ef80-471f-8a8c-dd305d114ada"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
